@@ -503,7 +503,7 @@
 487,0,6,4,0,1,5,1,no,0,0,0,none,0	//CG_LONGINGFREEDOM##
 488,0,6,4,0,1,5,1,no,0,0,0,misc,0	//CG_HERMODE##
 489,8,6,1,0,1,5,1,no,0,0,0,misc,0	//CG_TAROTCARD##
-490,8,8,1,3,0,10,1:2:3:4:5:6:7:8:9:10,yes,0,0,0,misc,0	//CR_ACIDDEMONSTRATION##
+490,8,8,1,0,0,10,1:2:3:4:5:6:7:8:9:10,yes,0,0,0,misc,0	//CR_ACIDDEMONSTRATION##
 491,1,6,2,0,1,2,1,no,0,0,0,none,0	//CR_CULTIVATION##
 
 //id,range,hit,inf,pl,nk,max,list_num,castcancel,cast_defence_rate,inf2,maxcount,skill_type,blow_count
